test: reenable ignored tests, reduce flakiness, run modified modules on PR (#349)
Related-to: vaadin/vaadin-grid-flow#635 vaadin/vaadin-grid-flow#122 vaadin/flow#4268